# pinto

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yaml  examples.html  genindex.html  index.html  nested-conda-example_link.html  objects.inv  pyproject.toml  search.html  searchindex.js  simple-conda-example_link.html  simple-poetry-example_link.html
.github/workflows/: conda-install.yaml  container-build.yaml  docs.yaml  system-install.yaml
_sources/: examples.rst.txt  nested-conda-example_link.rst.txt  simple-conda-example_link.rst.txt  simple-poetry-example_link.rst.txt
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/nested-conda-example/: README.md  environment.yaml
examples/nested-conda-example/src/: pyproject.toml
examples/simple-conda-example/: README.md  environment.yaml  pinto_conda_example.py  pyproject.toml
examples/simple-poetry-example/: README.md  pinto_example.py  pyproject.toml
pinto/: __init__.py  cli.py  env.py  logging.py  project.py  utils.py
tests/: conftest.py  test_cli.py  test_env.py  test_project.py
tests/configs/: pyproject.toml
tests/examples/: test_examples.py
