[tool.poetry]
name = "pinto"
version = "0.0.1"
description = "ML4GW environment management utility"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"

[tool.poetry.scripts]
pinto = "pinto.cli:main"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
toml = "^0.10"

# include these pip dependencies so that dev
# dependency installation doesn't update any
# of the required packages beyond the supported
# versions
poetry = "1.2.0a2"

# see https://github.com/python-poetry/poetry/issues/4264
packaging = "<21.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"
pytest = "^6.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["pinto"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
# still require poetry and conda here to
# ensure that the relevant packages can
# be installed in the base environment
requires = ["poetry>=1.2", "conda>4.2"]
build-backend = "poetry.masonry.api"
