[tool.poetry]
name = "pinto"
version = "0.1.1"
description = "ML4GW environment management utility"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"

[tool.poetry.scripts]
pinto = "pinto.cli:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
toml = "^0.10"
python-dotenv = "^0.20"

[tool.poetry.group.dev.dependencies]
pip = "^21.3"
pre-commit = "^2.16"
pytest = "^6.2"
pyyaml = ">5.0"
Sphinx = "^4.4.0"
myst-parser = { version="^0.17.0", extras=["linkify"] }

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["pinto"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
