[tool.poetry]
name = "pinto-nested-conda-example"
version = "0.0.1"
description = "Dummy Pinto nested Conda project example"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.scripts]
testme = "pinto_nested_conda_example:main"

[tool.poetry.dependencies]
python = "^3.8"
pip_install_test = "^0.5"
